install kernel as well

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -1,6 +1,6 @@
 FROM centos:7
 MAINTAINER Lars Bjørlykke Kristiansen
-RUN yum -y install git make autoconf libtool gcc kernel-devel which
+RUN yum -y install git make autoconf libtool gcc kernel kernel-devel which
 COPY uname.sh /
 RUN cp $(which uname) $(which uname).orig
 RUN mv /uname.sh $(which uname)
