more compatible uname hack

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -3,5 +3,5 @@ MAINTAINER Lars Bjørlykke Kristiansen
 RUN yum -y install git make autoconf libtool gcc kernel kernel-devel which
 COPY uname.sh /
 RUN cp $(which uname) $(which uname).orig
-RUN mv /uname.sh $(which uname)
-RUN echo "export KERNEL_VER=$(ls /usr/src/kernels)" > /etc/profile.d/fakeuname.sh; chmod a+x /etc/profile.d/fakeuname.sh
+RUN echo "KERNEL_VER=$(ls /usr/src/kernels)" > $(which uname)
+RUN cat /uname.sh >> $(which uname)
