--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -1,6 +1,7 @@
 FROM centos:7
 MAINTAINER Lars Bjørlykke Kristiansen
-RUN yum -y install git make autoconf libtool gcc kernel kernel-devel which
+RUN yum -y install git make autoconf libtool gcc gcc-c++ rpm-build kernel kernel-devel which qt-devel
+#install fake uname
 COPY uname.sh /
 RUN cp $(which uname) $(which uname).orig
 RUN echo "KERNEL_VER=$(ls /usr/src/kernels)" > $(which uname)
