containers for tegra X1 cross compiling. ubuntu

--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -3,6 +3,4 @@ MAINTAINER Lars Bjørlykke Kristiansen
 RUN yum -y install git make autoconf libtool gcc gcc-c++ rpm-build kernel kernel-devel which qt-devel
 #install fake uname
 COPY uname.sh /
-RUN cp $(which uname) $(which uname).orig
-RUN echo "KERNEL_VER=$(ls /usr/src/kernels)" > $(which uname)
-RUN cat /uname.sh >> $(which uname)
+RUN /uname.sh --install $(ls /usr/src/kernels | head -n 1)
