Base tegrax1_dis on latest tegrax1 image

--- a/tegrax1_dis/Dockerfile
+++ b/tegrax1_dis/Dockerfile
@@ -1,4 +1,4 @@
-FROM larsbk/tegrax1
+FROM larsbk/tegrax1:latest
 MAINTAINER Lars Bjørlykke Kristiansen
 RUN apt-get update && apt-get -y install autoconf make libtool gcc g++ pkg-config
 
