--- a/opensuse13/Dockerfile
+++ b/opensuse13/Dockerfile
@@ -1,5 +1,5 @@
 FROM opensuse:13.2
-MAINTAINER Lars Bjørlykke Kristiansen
+MAINTAINER Dolphinics
 RUN zypper install -y git make autoconf libtool gcc gcc-c++ glibc-devel rpm-build kernel-default-devel which qt-devel
 #install fake uname
 COPY uname.sh /
