--- a/centos6/Dockerfile
+++ b/centos6/Dockerfile
@@ -5,7 +5,8 @@ ENV GITVER=git-2.9.5
 
 RUN yum -y install make autoconf libtool gcc gcc-c++ glibc-devel glibc-devel.i686 \
                    libgcc libgcc.i686 rpm-build kernel kernel-devel which qt-devel \
-                   curl-devel expat-devel gettext-devel openssl-devel zlib-devel
+                   curl-devel expat-devel gettext-devel openssl-devel zlib-devel \
+                   perl-devel
 
 #Install git from source
 ADD https://www.kernel.org/pub/software/scm/git/$GITVER.tar.gz /
